# dxfeed

./: Cargo.toml  PROGRESS.md  README.md  filter.json
benches/: pipeline.rs
doc/: CONFIGURATION.md
src/: callsign.rs  domain.rs  feed.rs  freq.rs  lib.rs  metrics.rs  model.rs
src/aggregator/: core.rs  mod.rs  spot_table.rs
src/filter/: compiled.rs  config.rs  decision.rs  error.rs  evaluate.rs  mod.rs  pattern.rs
src/parser/: spot.rs
src/resolver/: cty.rs  enrichment.rs  entity.rs  mod.rs
src/skimmer/: config.rs  mod.rs  quality.rs
src/source/: cluster.rs  iac.rs  mod.rs  rbn.rs  supervisor.rs  telnet.rs
tests/: full_pipeline.rs  high_rate.rs  property_tests.rs
tests/fixtures/: arcluster_spots.txt  dxspider_spots.txt  rbn_spots.txt
