[package]
name = "dxfeed"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "DX cluster spot aggregation library for contest loggers"
license = "MIT"

[features]
default = ["serde"]
serde = ["dep:serde"]
raw-lines = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
regex = "1"

[dev-dependencies]
serde_json = "1"
