[package]
name = "dxfeed"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "DX cluster spot aggregation library for contest loggers"
license = "MIT"

[features]
default = ["serde"]
serde = ["dep:serde"]
raw-lines = []
cty = []
cli = ["cty", "serde", "dep:clap", "dep:serde_json", "tokio/signal", "dep:ratatui", "dep:crossterm", "dep:futures"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
regex = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bin]]
name = "dxfeed-cli"
required-features = ["cli"]

[[bench]]
name = "pipeline"
harness = false
